<resources>
    <string name="app_name">Movies App</string>
    <string name="title_activity_detail_movie">Detail Page</string>

    <string name="title">Title</string>
    <string name="quote">Quote</string>
    <string name="overview">Overview</string>
    <string name="release_year">Release Year</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="status">Status</string>
    <string name="original_lang">Original Language</string>

    <string name="movies">Movies</string>
    <string name="tvshow">TV Shows</string>
    <string name="by_developer">by Aulia Rosyida</string>
    <string name="footprint">Develop patiently</string>
    <string name="icon_movie_app">Icon Movie App</string>
</resources>